Fixed display issues on mobile (nav bar, pagination, attraction's title)

--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -18,6 +18,7 @@
     background: $black;
     color: white;
     border-right: 1px solid rgba(255,255,255,0.1);
+    border-top: 1px solid rgba(255,255,255,0.1);
     text-transform: uppercase;
     padding: 1.2rem 2rem 1rem 2rem;
     display: block;
@@ -77,8 +78,12 @@
 @media all and (max-width: 900px) {
   .nav {
     flex-wrap:wrap;
+    justify-content: flex-start;
     &__section {
       order: 1;
+      &--user{
+        margin-left: auto;
+      }
       &--search {
         border-top: 1px solid rgba(255,255,255,0.1);
         order: 2;
@@ -116,6 +121,7 @@
       &--logo {
         svg {
           width:100%;
+          height: 70px;
         }
       }
     }
