--- a/public/sass/partials/_typography.scss
+++ b/public/sass/partials/_typography.scss
@@ -75,4 +75,8 @@ p {
   margin-top: -9rem;
   font-size: 10rem;
   text-align: center;
+  @media all and (max-width: 550px) {
+    max-width: 550px;
+    font-size: 5rem;
+  }
 }
